--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -55,12 +55,12 @@
     "# The following code contains the credentials for a file in your IBM Cloud Object Storage.\n",
     "# You might want to remove those credentials before you share your notebook.\n",
     "credentials_1 = {\n",
-    "    'IBM_API_KEY_ID': 'yo76O2aatmCK_zvWZFnP5oQBk4Ej-lU_y7r_hv6ckQqh',\n",
-    "    'IAM_SERVICE_ID': 'iam-ServiceId-d373c9c4-6bef-4826-8119-f0578871f529',\n",
-    "    'ENDPOINT': 'https://s3.eu-geo.objectstorage.service.networklayer.com',\n",
-    "    'IBM_AUTH_ENDPOINT': 'https://iam.bluemix.net/oidc/token',\n",
-    "    'BUCKET': 'styletransfer-donotdelete-pr-meg1dozvuyyxz8',\n",
-    "    'FILE': 'content.png'\n",
+    "    'IBM_API_KEY_ID': '***',\n",
+    "    'IAM_SERVICE_ID': '***',\n",
+    "    'ENDPOINT': '***',\n",
+    "    'IBM_AUTH_ENDPOINT': '***',\n",
+    "    'BUCKET': '***',\n",
+    "    'FILE': '***'\n",
     "}"
    ]
   },
@@ -73,17 +73,17 @@
     "# Insert your Cloud Object Storage credentials here!\n",
     "\n",
     "cos_credentials = {\n",
-    "  \"apikey\": \"yo76O2aatmCK_zvWZFnP5oQBk4Ej-lU_y7r_hv6ckQqh\",\n",
+    "  \"apikey\": '***',\n",
     "  \"cos_hmac_keys\": {\n",
-    "    \"access_key_id\": \"507cd85ad59e4e289adde708b43a5ac6\",\n",
-    "    \"secret_access_key\": \"f2c48bb8d25f5e38cc7d812ee1ebfd8ec2c11e09d66cc42f\"\n",
+    "    \"access_key_id\": '***',\n",
+    "    \"secret_access_key\": '***'\n",
     "  },\n",
-    "  \"endpoints\": \"https://control.cloud-object-storage.cloud.ibm.com/v2/endpoints\",\n",
-    "  \"iam_apikey_description\": \"Auto generated apikey during resource-key operation for Instance - crn:v1:bluemix:public:cloud-object-storage:global:a/ce8cf6a45e150b00765de8a3331a8f7a:e8381a84-e2a2-430d-9883-0d40376d35a5::\",\n",
-    "  \"iam_apikey_name\": \"auto-generated-apikey-507cd85a-d59e-4e28-9add-e708b43a5ac6\",\n",
-    "  \"iam_role_crn\": \"crn:v1:bluemix:public:iam::::serviceRole:Writer\",\n",
-    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/ce8cf6a45e150b00765de8a3331a8f7a::serviceid:ServiceId-d373c9c4-6bef-4826-8119-f0578871f529\",\n",
-    "  \"resource_instance_id\": \"crn:v1:bluemix:public:cloud-object-storage:global:a/ce8cf6a45e150b00765de8a3331a8f7a:e8381a84-e2a2-430d-9883-0d40376d35a5::\"\n",
+    "  \"endpoints\": '***',\n",
+    "  \"iam_apikey_description\": '***',\n",
+    "  \"iam_apikey_name\": '***',\n",
+    "  \"iam_role_crn\": '***',\n",
+    "  \"iam_serviceid_crn\": '***',\n",
+    "  \"resource_instance_id\": '***'\n",
     "}"
    ]
   },
@@ -122,15 +122,15 @@
     "from watson_machine_learning_client import WatsonMachineLearningAPIClient\n",
     "\n",
     "wml_credentials = {\n",
-    "  \"apikey\": \"fvQhnasISmiCfBY_B5s_-BoUXCcNhaTZvkoZp4FEHsKj\",\n",
-    "  \"iam_apikey_description\": \"Auto generated apikey during resource-key operation for Instance - crn:v1:bluemix:public:pm-20:eu-gb:a/ce8cf6a45e150b00765de8a3331a8f7a:b38e1378-d26a-49b5-abd1-8c8400c718da::\",\n",
-    "  \"iam_apikey_name\": \"auto-generated-apikey-8acbeb08-6d14-40e4-9965-e9ced6ef2282\",\n",
-    "  \"iam_role_crn\": \"crn:v1:bluemix:public:iam::::serviceRole:Writer\",\n",
-    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/ce8cf6a45e150b00765de8a3331a8f7a::serviceid:ServiceId-d44c04a6-4d41-4852-b4ff-7d102b5b75af\",\n",
-    "  \"instance_id\": \"b38e1378-d26a-49b5-abd1-8c8400c718da\",\n",
-    "  \"password\": \"f5a65dc6-83f8-49a6-b157-1340b943054d\",\n",
-    "  \"url\": \"https://eu-gb.ml.cloud.ibm.com\",\n",
-    "  \"username\": \"8acbeb08-6d14-40e4-9965-e9ced6ef2282\"\n",
+    "  \"apikey\": '***',\n",
+    "  \"iam_apikey_description\": '***',\n",
+    "  \"iam_apikey_name\": '***',\n",
+    "  \"iam_role_crn\": '***',\n",
+    "  \"iam_serviceid_crn\": '***',\n",
+    "  \"instance_id\": '***',\n",
+    "  \"password\": '***',\n",
+    "  \"url\": '***',\n",
+    "  \"username\": '***'\n",
     "}\n",
     "\n",
     "client = WatsonMachineLearningAPIClient( wml_credentials )\n",
@@ -256,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
