updating file path

--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "metadata = {\n",
     "    client.repository.DefinitionMetaNames.NAME              : \"pytorch-styletransfer-wml\",\n",
-    "    client.repository.DefinitionMetaNames.AUTHOR_EMAIL      : \"chrisparsons@uk.ibm.com\",\n",
+    "    client.repository.DefinitionMetaNames.AUTHOR_EMAIL      : \"****\",\n",
     "    client.repository.DefinitionMetaNames.FRAMEWORK_NAME    : \"pytorch\",\n",
     "    client.repository.DefinitionMetaNames.FRAMEWORK_VERSION : \"1.0\",\n",
     "    client.repository.DefinitionMetaNames.RUNTIME_NAME      : \"python\",\n",
