--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -453,11 +453,11 @@
     "\n",
     "You should see the status change from:\n",
     "\n",
-    "1. Pending\n",
-    "2. Running\n",
-    "3. Completed\n",
+    "1. **Pending** - we're waiting for a GPU to be free to run our job and setting up the runtime.\n",
+    "2. **Running** - woohoo! We're transferring the style.\n",
+    "3. **Completed** - all done! \n",
     "\n",
-    "When it's all done, check out the CoS bucket to see your s"
+    "When it's all done, check out the CoS bucket to see your results. As detailed [here](https://github.com/ChrisParsonsDev/wml-pytorch-style-transfer)"
    ]
   },
   {
