removing credentials_1 reference

--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -395,7 +395,7 @@
     "      \"secret_access_key\" : cos_credentials[\"cos_hmac_keys\"][\"secret_access_key\"]\n",
     "      },\n",
     "   \"source\" : { \n",
-    "      \"bucket\" : credentials_1['BUCKET'],\n",
+    "      \"bucket\" : image_credentials['BUCKET'],\n",
     "      },\n",
     "      \"type\" : \"s3\"\n",
     "   },\n",
