renaming image_credentails

--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -130,6 +130,20 @@
     "\n",
     "Follow the tutorial on [GitHub](https://github.com/ChrisParsonsDev/wml-pytorch-style-transfer) and insert your credentials into the code cell below. \n",
     "\n",
+    "It should look a little like this: \n",
+    "\n",
+    "````\n",
+    "image_credentials = {\n",
+    "    'IBM_API_KEY_ID': '***',\n",
+    "    'IAM_SERVICE_ID': '***',\n",
+    "    'ENDPOINT': '***',\n",
+    "    'IBM_AUTH_ENDPOINT': '***',\n",
+    "    'BUCKET': '***',\n",
+    "    'FILE': '***'\n",
+    "}\n",
+    "\n",
+    "````\n",
+    "\n",
     "Once you've done that. Run the block and move on down.."
    ]
   },
@@ -139,16 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your image credentials here!\n",
-    "\n",
-    "image_credentials = {\n",
-    "    'IBM_API_KEY_ID': '***',\n",
-    "    'IAM_SERVICE_ID': '***',\n",
-    "    'ENDPOINT': '***',\n",
-    "    'IBM_AUTH_ENDPOINT': '***',\n",
-    "    'BUCKET': '***',\n",
-    "    'FILE': '***'\n",
-    "}"
+    "# Insert your image credentials here and name them image_credentials\n",
+    "\n"
    ]
   },
   {
@@ -406,7 +412,7 @@
     "      \"secret_access_key\" : cos_credentials[\"cos_hmac_keys\"][\"secret_access_key\"]\n",
     "      },\n",
     "      \"target\" : {\n",
-    "         \"bucket\" : image_credentails['BUCKET'],\n",
+    "         \"bucket\" : image_credentials['BUCKET'],\n",
     "      },\n",
     "      \"type\" : \"s3\"\n",
     "   }\n",
@@ -450,6 +456,8 @@
     "## Status Update\n",
     "\n",
     "To view the status of your job at any time, run the code cell below. \n",
+    "\n",
+    "Training, on the free tier, should take approximately 6 minutes (assuming you used the defaults).\n",
     "\n",
     "You should see the status change from:\n",
     "\n",
