wildcard default image file names

--- a/wml-style-transfer.ipynb
+++ b/wml-style-transfer.ipynb
@@ -306,8 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "style_image_name = \"style.png\"\n",
-    "content_image_name = \"content.jpeg\"\n",
+    "style_image_name = \"YOUR_STYLE_IMAGE_NAME_HERE.png\"\n",
+    "content_image_name = \"YOUR_CONTENT_IMAGE_NAME_HERE.jpeg\"\n",
     "training_iterations = \"2000\""
    ]
   },
